@@ -1,5 +1,6 @@
 package cn.cerc.jpage.core;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -75,8 +76,9 @@ public class Component {
         return id;
     }
 
-    public <T> T create(Class<T> clazz) throws InstantiationException, IllegalAccessException {
-        T obj = clazz.newInstance();
+    public <T> T create(Class<T> clazz) throws InstantiationException, IllegalAccessException, IllegalArgumentException,
+            InvocationTargetException, NoSuchMethodException, SecurityException {
+        T obj = clazz.getDeclaredConstructor().newInstance();
         if (!(obj instanceof Component))
             throw new RuntimeException("仅支持Component及其子数，不支持创建类型: " + clazz.getName());
         Component item = (Component) obj;
